Only put scrollbar on console contents if needed. Fixes double scroll bar when not sticky navbar

--- a/web/skins/classic/css/base/views/console.css
+++ b/web/skins/classic/css/base/views/console.css
@@ -118,7 +118,7 @@ form[name="monitorForm"] {
 }
 #monitorList {
   flex: 1 1 auto;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 #contentButtons {
   float: none;
